--- a/templates/picker.html
+++ b/templates/picker.html
@@ -9,12 +9,16 @@
     <h6>A tool to help NUS undergraduates choose the SEP school that allows for most module mappings!</h6>
     <form action="/" method="post">
         <div class="input-group mb-3">
-            <div class="input-group-prepend"><span class="input-group-text">Essential Modules:</span></div>
-            <input name="em" type="text" class="form-control" placeholder="Separated by Space" aria-label="Essential Modules to be mapped" value="{{text1}}">
+          <div class="input-group-prepend"><span class="input-group-text">Essential Modules:</span></div>
+          <select class="selectpicker form-control" multiple data-live-search="true" name="em">
+            {% include "modules.html" %}
+          </select>
         </div>
         <div class="input-group mb-3">
-            <div class="input-group-prepend"><span class="input-group-text">Optional Modules:</span></div>
-            <input name="om" type="text" class="form-control" placeholder="Separated by Space" aria-label="Optional Modules to be mapped" value="{{text2}}">
+          <div class="input-group-prepend"><span class="input-group-text">Optional Modules:</span></div>
+          <select class="selectpicker form-control" multiple data-live-search="true" name="om">
+            {% include "modules.html" %}
+          </select>
         </div>
 
         {% include "regions.html" %}
