--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-        <link href="static/styles.css" rel="stylesheet">
+        <link href="static/styles.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <title>{% block title %}{% endblock %}</title>
     </head>
