--- a/templates/schools.html
+++ b/templates/schools.html
@@ -1,6 +1,6 @@
 <div class="input-group mb-3">
     <div class="input-group-prepend"><span class="input-group-text">Schools:</span></div>
-    <select class="selectpicker form-control" multiple data-live-search="true" name="schools">
+    <select class="selectpicker form-control" multiple data-live-search="true" name="schools" id="schools">
         <option>Aalto University, Helsinki</option>
         <option>Aalto University, Mikkeli</option>
         <option>Aalto University</option>
@@ -339,4 +339,12 @@
         <option>York University</option>
         <option>Zhejiang University</option>
     </select>
+    <div class="input-group-append">
+        <label class="form-check-label" for="school_clear" style="cursor:pointer">
+            <span class="input-group-text">
+                <input class="form-check-input" type="checkbox" id="school_clear" onClick="clearSchool()" style="opacity:0">
+                Clear
+            </span>
+        </label>
+      </div>
 </div>
