--- a/templates/picker.html
+++ b/templates/picker.html
@@ -8,7 +8,7 @@
     <h1>SEPicker</h1>
     <h6>A tool to help NUS undergraduates choose the SEP school that allows for most module mappings!</h6>
     <form action="/" method="post">
-        <div class="input-group mb-3" name="em_group">
+        <div class="input-group mb-3">
           <div class="input-group-prepend"><span class="input-group-text">Essential Modules:</span></div>
           <select class="selectpicker form-control" multiple data-live-search="true" name="em" id="em">
             {% include "modules.html" %}
