--- a/templates/picker.html
+++ b/templates/picker.html
@@ -319,6 +319,9 @@
                 </div>
                 {% endfor %}
             </div>
+            <footer class="small text-center text-muted" style="background-color: white;">
+                A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee. Information retrieved 8 Jan 2020.
+            </footer>
             <script>
               if ( window.history.replaceState ) {
                   window.history.replaceState( null, null, window.location.href );
