nus module code

--- a/templates/picker.html
+++ b/templates/picker.html
@@ -299,7 +299,7 @@
                                             <td class="hello-world">
                                                 {{nusmod.upper()}}<br /><span
                                                     class="description"
-                                                    >Nusmod title
+                                                    >{{nus_code_title_dict[nusmod]}}
                                                 </span>
                                             </td>
                                             <td>
