--- a/templates/picker.html
+++ b/templates/picker.html
@@ -40,7 +40,7 @@
         </div>
         {% if error %}
         <div class="my-alert danger" onClick="closeAlert(this)">
-            {{ error }}
+            {{ error }}. Click banner to dismiss.
         </div>
         {% endif %}
         <div class="dashboard">
