--- a/templates/picker.html
+++ b/templates/picker.html
@@ -85,7 +85,7 @@
                                     multiple
                                     data-live-search="true"
                                     name="em" id="em">
-                                    {%include "modules.html"%}
+                                    {%include "modules_em.html"%}
                                   </select>
                                 </div>
                             </div>
@@ -118,7 +118,7 @@
                                       multiple
                                       data-live-search="true"
                                       name="om" id="om">
-                                      {%include "modules.html"%}
+                                      {%include "modules_om.html"%}
                                     </select>
                                 </div>
                             </div>
