--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,28 +1,69 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-        <link href="static/style.css" rel="stylesheet" type="text/css">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <meta charset="UTF-8" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+            rel="stylesheet"
+        />
+        <script
+            src="https://kit.fontawesome.com/aa4b3d32f9.js"
+            crossorigin="anonymous"
+        ></script>
+
+        <link href="static/style.css" rel="stylesheet" type="text/css" />
+
         <title>{% block title %}{% endblock %}</title>
+
     </head>
     <body>
-        <div class="sidenav">
-            <a href="/">Home</a>
-            <a href="/help">Help</a>
+        <div class="navigation">
+            <nav class="navigation__nav">
+                <div class="navigation__name">
+                    <i class="fas fa-globe-asia"></i>
+                    SEPicker
+                </div>
+                <div class="navigation__list">
+                    <a href="/picker" class="navigation__link">Picker</a>
+                    <a href="/fav" class="navigation__link">Favourites</a>
+                    <a href="/department" class="navigation__link">Department</a>
+                </div>
+            </nav>
         </div>
-        <div class="main">
-            {% block main %}
-            {% endblock%}
-        </div>
+        {%block main%}{%endblock%}
         <footer class="small text-center text-muted" style="background-color: white;">
-            A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee.
+            A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee. Last updated 8 Jan 2020.
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script>
+          if ( window.history.replaceState ) {
+              window.history.replaceState( null, null, window.location.href );
+          }
+        </script>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    </body>
+    </div>
+</body>
 </html>
