--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,8 +33,8 @@
                     SEPicker
                 </div>
                 <div class="navigation__list">
-                    <a href="/picker" class="navigation__link">Picker</a>
-                    <a href="/fav" class="navigation__link">Favourites</a>
+                    <a href="/" class="navigation__link">Picker</a>
+                    <a href="/plans" class="navigation__link">Favourites</a>
                     <a href="/department" class="navigation__link">Department</a>
                 </div>
             </nav>
