--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,9 +33,9 @@
                     SEPicker
                 </div>
                 <div class="navigation__list">
-                    <a href="/picker" class="navigation__link">Picker</a>
+                    <a href="/" class="navigation__link">Picker</a>
                     <a href="/fav" class="navigation__link">Favourites</a>
-                    <a href="/department" class="navigation__link">Department</a>
+                    <!-- <a href="/department" class="navigation__link">Department</a> -->
                 </div>
             </nav>
         </div>
