--- a/templates/plans.html
+++ b/templates/plans.html
@@ -75,8 +75,9 @@ main %}
 <div class="main-container">
         <div class="search-form-title margin-bottom-med">
             <span class="heading-primary">Favourites</span>
+            <p>Mappings that you favourite from Picker will appear here!</p>
         </div>
-        <div id="data-container">
+        <div id="data-container"></div>
         </div>
 </div>
 
